@@ -77,6 +77,7 @@ Please visit http://aegisub.net to download latest version
    o Spanish (thanks to NeSuKuN)
    o Italian (thanks to EmBoLo)
    o Korean (thanks to oblisk)
+- Style editor now uses a dropdown for the encoding field. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
